--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -5,6 +5,10 @@ html {
 }
 
 .container {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 5fr 1fr;
+  gap: 15px;
   text-align: center;
   height: 100%;
   padding: 16px;
@@ -22,22 +26,30 @@ html {
 
 .header {
   background-color: #006157;
+  grid-column: span 2;
 }
 
 .sidebar {
   background-color: #005B94;
+  grid-row: 2 / 4;
+  grid-column: 1 / 2;
 }
 
 .nav {
   background-color: #642cde;
+  grid-column: 2;
+  grid-row: 2;
 }
 
 .article {
   background-color: #7E1DC3;
+  grid-column: 2;
+  grid-row: 3 / 4;
 }
 
 .footer {
   background-color: #393f4d;
+  grid-column: span 2;
 }
 
 .article p {
