--- a/intermediate-html-css/advanced-grid/01-responsive-holy-grail/style.css
+++ b/intermediate-html-css/advanced-grid/01-responsive-holy-grail/style.css
@@ -7,6 +7,12 @@ html {
 .container {
   text-align: center;
   height: 100%;
+  display: grid;
+  grid-template-columns: minmax(200px, 1fr) 3fr;
+  grid-template-rows: 1fr 1fr 5fr 1fr;
+  overflow: auto;
+  resize: both;
+  gap: 15px;
   padding: 16px;
   box-sizing: border-box;
 }
@@ -32,10 +38,12 @@ html {
 
 .nav {
   background-color: #642cde;
+  grid-column: 2 / 3;
 }
 
 .article {
   background-color: #7E1DC3;
+  grid-column: 2 / 3;
 }
 
 .article p {
