--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -1,10 +1,15 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
+  min-height: 100vh;
 }
 
 .container div {
@@ -17,15 +22,36 @@
 
 .header {
   background-color: #393f4d;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column: span 2;
 }
 
-.menu ul,
-.menu li {
+.logo {
+  justify-self: start;
+}
+
+.menu ul {
+  display: grid;
+  align-self: center;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
   font-size: 16px;
+  list-style: none;
+}
+
+.menu li, 
+.nav li {
+  list-style-type: none;
 }
 
 .sidebar {
   background-color: #C50208;
+  display: grid;
+  grid-column: 1;
+  grid-row: 2 / 4;
+  align-items: center;
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -34,18 +60,27 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  padding: 50px;
 }
-
 
 .sidebar .side-content {
   background-color: white;
   color: black;
   font-size: 16px;
   font-weight: normal;
+  padding: 50px;
 }
 
 .nav {
   background-color: #C50208;
+  grid-column: 2;
+  grid-row: 2;
+}
+
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  list-style: none;
 }
 
 .nav ul li {
@@ -55,6 +90,11 @@
 
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-column: 2;
+  grid-row: 3;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -62,12 +102,15 @@
   font-family: sans-serif;
   color: white;
   text-align: left;
+  padding: 8px;
 }
 
 .article .card {
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
+  border-radius: 8px;
 }
 
 .card p {
@@ -83,6 +126,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: span 2;
 }
 
 .footer p {
